--- a/views/Employee.ejs
+++ b/views/Employee.ejs
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <title>Employee Details</title>
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+
 <body>
     <%- include('partials/navbar', { page: '' }) %>
 
     <div class="container mx-auto p-4">
-
-        <div class="hero bg-base-200 rounded-lg p-6">
-            <div class="hero-content text-center ">
+        <div class="hero bg-base-200 rounded-lg p-6 transition-transform hover:translate-y-1 shadow-md">
+            <div class="hero-content text-center">
                 <div class="max-w-md">
-                    <h1 id="Employee-name" class="text-5xl font-bold">Employee Id : <%= Employee.id %></h1>
-
-                    <p class="py-6">Employees Name :<span id="Employee-name-details"><%= Employee.first_name %> <%= Employee.last_name%></span></p>
+                    <h1 id="Employee-name" class="text-2xl font-bold">Employee ID : <%= Employee.id %></h1>
+                    <p class="py-4 text-2xl">Employee Name: <span id="Employee-name-details"><%= Employee.first_name %> <%= Employee.last_name%></span></p>
                 </div>
             </div>
         </div>
 
         <br />
-
-        <div class="flex">
-            <div class="w-32 h-32 rounded-full overflow-hidden">
-                <img id="Employee-image" class="w-full h-full object-cover" src="<%= Employee.Image %>" alt="Employee Image" />
-            </div>
-            <div class="prose ml-4">
-                <p>
-                    <span class="font-bold" id="Employee Experience">Employee Experience: <%= Employee.years_of_experience %></span> <br />
-                    <span class="font-bold" id="Salary">Salary: <%= Employee.salary %></span> <br />
-                    <span class="font-bold" id="department">Department: <%= Employee.department %></span> <br>
-                    <span class="font-bold" id="email">Email: <%= Employee.email %></span><br>
-                    <span class="font-bold" id="job_title">Job Title: <%= Employee.job_title %></span><br>
-                    <span class="font-bold" id="gender">Gender: <%= Employee.gender %></span><br>
-                    <span class="font-bold" id="phone">Phone: <%= Employee.phone %></span><br>
-                    <br /><br />
-                </p>
-                <button onclick="window.history.back()" class="bg-blue-500 text-white px-4 py-2 rounded-md">Return</button>
+      
+       <div class="flex items-center">
+    <div class="bg-base-200 shadow-md rounded-lg p-1">
+        <div class="rounded-full overflow-hidden border-2 border-gray-200">
+            <img id="Employee-image" class="h-40 w-40 object-cover"
+                src="<%= Employee.Image %>" alt="Employee Image" />
+        </div>
+    </div>
+            <div class="description flex-grow ml-4 bg-base-200 p-4 rounded-lg shadow-md">
+                <div class="text-center">
+                    <h3 class="text-gray-500 text-2xl font-bold">Employee Details:</h3>
+                </div>
+                <div class="text-left mt-4 prose">
+                    <p>
+                        <span class="font-semibold" id="email">Email:</span> <%= Employee.email %><br>
+                        <span class="font-semibold" id="phone">Phone:</span> <%= Employee.phone %><br>
+                        <span class="font-semibold" id="gender">Gender:</span> <%= Employee.gender %><br>
+                        <span class="font-semibold" id="age">Age:</span> <%= Employee.age %><br>
+                        <span class="font-semibold" id="job_title">Job Title:</span> <%= Employee.job_title %><br>
+                        <span class="font-semibold" id="Employee Experience">Employee Experience:</span> <%= Employee.years_of_experience %><br />
+                        <span class="font-semibold" id="Salary">Salary:</span> <%= Employee.salary %><br />
+                        <span class="font-semibold" id="department">Department:</span> <%= Employee.department %><br>
+                    </p>
+                    <div class="mt-4">
+                        <button onclick="window.history.back()"
+                            class="bg-blue-500 text-white px-4 py-2 rounded-md">Return</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
