--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/main.css">
 <%- include('partials/navbar', {page: '/EmployeeData/Employees'}) %>
+<br>
 <div class="flex items-center space-x-4">
   <input id="searchbar" type="text"  placeholder=" Search Emplyoees..." class="border rounded-md px-2 py-2 w-full" onkeyup="searchEmp()">
 
@@ -12,13 +13,14 @@
   </select>
   <button class="bg-blue-500 text-white px-4 py-2 rounded-md">Search</button>
 </div>
+<br>
 
 
 
 <div class="overflow-x-auto" >
   <table class="table min-w-full border border-gray-300" id ="tableData">
     <thead>
-      <tr class="bg-gray-100">
+      <tr class="bg-base-400">
         <th class="px-6 py-2 border-b">ID</th>
         <th class="px-6 py-2 border-b">Name</th>
         <th class="px-6 py-2 border-b">Email</th>
@@ -34,8 +36,8 @@
     <tbody>
       <div class="employee-list">
       <% Employees.forEach((Emp) => { %>
-        <tr class="hover:bg-gray-50">
-          <td class="px-6 py-4"><button onclick="location.href='/employeeData/Employees/<%=Emp.id%>'"class="border rounded-md px-3 py-1 text-gray-700 bg-white hover:bg-gray-100"><%= Emp.id %></button></td>
+        <tr class="hover:bg-base-200">
+          <td class="px-6 py-4"><button onclick="location.href='/employeeData/Employees/<%=Emp.id%>'"class="border rounded-md px-3 py-1 text-gray-700 bg-gray-400 hover:bg-white-100"><%= Emp.id %></button></td>
           <td class="px-6 py-4">
             <div class="flex items-center space-x-3">
               <div class="avatar">
@@ -44,8 +46,8 @@
                 </div>
               </div>
               <div>
-                <div class="font-bold text-gray-800" id="name"><%= Emp.first_name %> <%= Emp.last_name %></div>
-                <div class="text-sm text-gray-500"><%= Emp.department %></div>
+                <div class="font-bold text-gray-300" id="name"><%= Emp.first_name %> <%= Emp.last_name %></div>
+                <div class="text-sm text-gray-300"><%= Emp.department %></div>
               </div>
             </div>
           </td>
@@ -57,7 +59,7 @@
               <%= Emp.job_title %>
           </td>
           <td class="px-6 py-4">
-              <button onclick="location.href='/employeeData/Employees/years/<%= Emp.years_of_experience %>'"class="border rounded-md px-3 py-1 text-gray-700 bg-white hover:bg-gray-100">
+              <button onclick="location.href='/employeeData/Employees/years/<%= Emp.years_of_experience %>'"class="border rounded-md px-3 py-1 text-gray-700 bg-gray-400   hover:bg-white-100">
                 <%= Emp.years_of_experience %>
             </button>
           </td>
