--- a/views/Employee.ejs
+++ b/views/Employee.ejs
@@ -38,10 +38,10 @@
                         <span class="font-semibold" id="phone">Phone:</span> <%= Employee.phone %><br>
                         <span class="font-semibold" id="gender">Gender:</span> <%= Employee.gender %><br>
                         <span class="font-semibold" id="age">Age:</span> <%= Employee.age %><br>
-                        <span class="font-semibold" id="job_title">Job Title:</span> <%= Employee.job_title %><br>
+                        <span class="font-semibold" id="job_title">Job Title:</span> <%= Employee.Jobtitle.Job_title %><br>
                         <span class="font-semibold" id="Employee Experience">Employee Experience:</span> <%= Employee.years_of_experience %><br />
                         <span class="font-semibold" id="Salary">Salary:</span> <%= Employee.salary %><br />
-                        <span class="font-semibold" id="department">Department:</span> <%= Employee.department %><br>
+                        <span class="font-semibold" id="department">Department:</span> <%= Employee.Department.Department %><br>
                     </p>
                     <div class="mt-4">
                         <button onclick="window.history.back()"
