--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,6 +2,8 @@
 <nav class="w-full px-8 py-2">
     <a class="  text-gray text-2xl font-bold px-4<%= (page == "/") ? 'active' : '' %>" href="/">Home</a>
     <a class="  text-gray text-2xl font-bold px-6<%= (page == "/about") ? 'active' : '' %>" href="/about">About</a>
+    <a class="  text-gray text-2xl font-bold px-6<%= (page == "/employeeData/Employees") ? 'active' : '' %>" href="/employeeData/Employees">Employees</a>
+    <a class="  text-gray text-2xl font-bold px-6<%= (page == "/employeeData/addEmployees") ? 'active' : '' %>" href="/employeeData/addEmployees">Add Employees</a>
   </nav>
   
   
