--- a/views/addEmployees.ejs
+++ b/views/addEmployees.ejs
@@ -20,38 +20,38 @@
        
         <div class="mb-4">
             <label for="id" class="block text-sm font-semibold">Employee ID :</label>
-            <input type="number" id="id" name="id" required class="w-full p-2 border rounded">
+            <input type="number" id="id" name="id" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
             <label for="first_name" class="block text-sm font-semibold">Employee First Name:</label>
-            <input type="text" id="first_name" name="name" required class="w-full p-2 border rounded">
+            <input type="text" id="first_name" name="first_name" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
             <label for="last_name" class="block text-sm font-semibold">Employee Last Name:</label>
-            <input type="text" id="last_name" name="name" required class="w-full p-2 border rounded">
+            <input type="text" id="last_name" name="last_name" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
             <label for="email" class="block text-sm font-semibold">Email :</label>
-            <input type="email" value="@gmail.com" id="email" name="email" required class="w-full p-2 border rounded">
+            <input type="email" value="@gmail.com" id="email" value="" name="email" required class="w-full p-2 border rounded">
         </div>
 
   
         <div class="mb-4">
             <label for="phone" class="block text-sm font-semibold">Phone :</label>
-            <input type="number" id="phone" name="phone"  required class="w-full p-2 border rounded">
+            <input type="text" id="phone" name="phone" value=""  required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
             <label for="gender" class="block text-sm font-semibold">Gender :</label>
-            <input type="text" id="gender" name="gender" required class="w-full p-2 border rounded">
+            <input type="text" id="gender" name="gender" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
             <label for="age" class="block text-sm font-semibold">Age :</label>
-            <input type="number" id="age" name="age" required class="w-full p-2 border rounded">
+            <input type="number" id="age" name="age" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
@@ -66,12 +66,12 @@
 
         <div class="mb-4">
             <label for="years_of_experience" class="block text-sm font-semibold">Employee Experience :</label>
-            <input type="number" id="years_of_experience" name="years_of_experience" required class="w-full p-2 border rounded">
+            <input type="number" id="years_of_experience" name="years_of_experience" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div class="mb-4">
             <label for="salary" class="block text-sm font-semibold">Salary :</label>
-            <input type="number" id="salary" name="salary" required class="w-full p-2 border rounded">
+            <input type="number" id="salary" name="salary" value="" required class="w-full p-2 border rounded">
         </div>
         
         <div class="mb-4">
@@ -85,11 +85,11 @@
         
         <div class="mb-4">
             <label for="Image" class="block text-sm font-semibold">Image :</label>
-            <input type="url" id="img_url" name="img_url" required class="w-full p-2 border rounded">
+            <input type="url" id="Image" name="Image" value="" required class="w-full p-2 border rounded">
         </div>
 
         <div>
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
         </div>
     </form>
 </div>
