--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-  <link rel="stylesheet" href="/css/main.css">
+<html lang="en" data-theme="valentine">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Employee Data</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/main.css" />
+    <title>Login</title>
+    <style>
+        input {
+            height: 35px;
+            padding: 4px;
+        }
+    </style>
 </head>
 
-<body>
-  <%- include('partials/navbar', {page: '/'}) %>
-  
-<br>
-<div class="flex items-center space-x-4">
-  <input id ="searchbar" type="text" placeholder=" Search..." class="border rounded-md px-2 py-2 w-full">
+<body tabindex="-1">
+    <%- include('partials/navbar', {page: '/' }) %>
+        <% if (errorMessage) { %>
+            <div class="alert alert-error" role="alert">
+                <span>
+                    <%= errorMessage %>
+                </span>
+            </div>
+            <% } %>
+                <div class="px-3">
+                    <div class="hero bg-base-200 rounded-lg p-6">
+                        <div class="hero-content text-center ">
+                            <div class="max-w-md">
+                                <h1 class="text-5xl">Login</h1>
+                                <p class="mt-2">Please provide your credentials below</p>
+                            </div>
+                        </div>
+                    </div>
+                    <form action="/" method="POST">
+                        <div class="mb-4">
+                            <label for="name" class="block font-bold mb-2">User Name</label>
+                            <input type="text" id="userName" name="userName" required
+                                class="form-input w-full rounded border p-3 h-10">
+                        </div>
 
-  <select class="border rounded-md px-2 py-2">
-    <option id="employee_id" >Employee ID</option>
-    <option id="department">Department</option>
-    <option id="job_title"> Job Title</option>
-    <option id="years_of_experience">years of Experience</option>
-  </select>
+                        <div class="mb-4">
+                            <label for="year" class="block font-bold mb-2">Password</label>
+                            <input type="password" id="password" name="password" required
+                                class="form-input w-full rounded border p-3 h-10">
+                        </div>
 
-  <button class="bg-blue-500 text-white px-4 py-2 rounded-md">Search</button>
-  
-  
 
-  
-</div>
+                        <div class="flex items-center justify-between gap-4">
+                            <button type="submit" class="btn btn-success">Login</button>
+                        </div>
+
+
+                    </form>
+                </div>
 </body>
+
 </html>
