--- a/modules/auth-service.ejs
+++ b/modules/auth-service.ejs
@@ -34,7 +34,7 @@ let User;
 
 async function initialize() {
     return new Promise((resolve, reject) => {
-        let db = mongoose.createConnection(process.env.MONGODB_DB);
+        let db = mongoose.createConnection(process.env.MONGO_URI);
 
         db.on('error', (err) => {
             reject(err);
