--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,43 +16,59 @@
 
 <body tabindex="-1">
     <%- include('partials/navbar', {page: '/' }) %>
-        <% if (errorMessage) { %>
-            <div class="alert alert-error" role="alert">
-                <span>
-                    <%= errorMessage %>
-                </span>
-            </div>
-            <% } %>
-                <div class="px-3">
-                    <div class="hero bg-base-200 rounded-lg p-6">
-                        <div class="hero-content text-center ">
-                            <div class="max-w-md">
-                                <h1 class="text-5xl">Login</h1>
-                                <p class="mt-2">Please provide your credentials below</p>
-                            </div>
-                        </div>
-                    </div>
-                    <form action="/" method="POST">
-                        <div class="mb-4">
-                            <label for="name" class="block font-bold mb-2">User Name</label>
-                            <input type="text" id="userName" name="userName" required
-                                class="form-input w-full rounded border p-3 h-10">
-                        </div>
-
-                        <div class="mb-4">
-                            <label for="year" class="block font-bold mb-2">Password</label>
-                            <input type="password" id="password" name="password" required
-                                class="form-input w-full rounded border p-3 h-10">
-                        </div>
-
-
-                        <div class="flex items-center justify-between gap-4">
-                            <button type="submit" class="btn btn-success">Login</button>
-                        </div>
-
-
-                    </form>
+    <% if (errorMessage) { %>
+    <div class="alert alert-error" role="alert">
+        <span>
+            <%= errorMessage %>
+        </span>
+    </div>
+    <% } %>
+    <div class="px-3">
+        <div class="hero bg-base-200 rounded-lg p-6">
+            <div class="hero-content text-center ">
+                <div class="max-w-md">
+                    <h1 class="text-5xl">Login</h1>
+                    <p class="mt-2">Please provide your credentials below</p>
                 </div>
+            </div>
+        </div>
+        <form id="loginForm" action="/" method="POST">
+            <div class="mb-4">
+                <label for="userName" class="block font-bold mb-2">User Name</label>
+                <input type="text" id="userName" name="userName" required
+                    class="form-input w-full rounded border p-3 h-10">
+            </div>
+
+            <div class="mb-4">
+                <label for="password" class="block font-bold mb-2">Password</label>
+                <input type="password" id="password" name="password" required
+                    class="form-input w-full rounded border p-3 h-10">
+            </div>
+
+            <div class="flex items-center justify-between gap-4">
+                <button type="submit" class="btn btn-success">Login</button>
+            </div>
+        </form>
+    </div>
+
+    <script>
+        window.onload = function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const username = urlParams.get('username');
+            const password = urlParams.get('password');
+
+            
+            if (username && password) {
+                document.getElementById('userName').value = username;
+                document.getElementById('password').value = password;
+
+                
+                setTimeout(function() {
+                    document.getElementById('loginForm').submit();
+                }, 500);
+            }
+        };
+    </script>
 </body>
 
 </html>
